--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Tremble is a very minimalist CI utility in javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha --reporter list --recursive"
+    "test": "NODE_ENV=test mocha --reporter list --recursive",
+    "coverage": "istanbul cover _mocha -- -R spec"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "co-mocha": "^1.1.2",
     "eslint": "^2.2.0",
     "eslint-config-google": "^0.4.0",
+    "istanbul": "^0.4.2",
     "mocha": "^2.4.5"
   },
   "dependencies": {
@@ -39,6 +41,7 @@
     "mz": "^2.3.1",
     "nodegit": "^0.11.6",
     "rimraf": "^2.5.2",
+    "supertest": "^1.2.0",
     "uuid": "^2.0.1"
   }
 }
