--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "co-express": "^1.2.1",
     "express": "^4.13.4",
     "jade": "^1.11.0",
+    "lodash": "^4.6.1",
     "morgan": "^1.7.0",
     "mz": "^2.3.1",
     "nodegit": "^0.11.6",
